inicial de cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="CABECERA">
+            CABECERA
+        </div>
         <div id="post">
     <h1>SE REALIZARA BLOGPOST PARA VALIDAR RAMAS</h1>
     <p>Parrafo de inicio , se realizara 
