--- a/blogpost.html
+++ b/blogpost.html
@@ -11,11 +11,15 @@
     <div id="container">
         <div id="CABECERA">
             CABECERA
+            <span id="Linea"> TOMAR NOTA </span>
         </div>
         <div id="post">
+
     <h1>SE REALIZARA BLOGPOST PARA VALIDAR RAMAS</h1>
     <p>Parrafo de inicio , se realizara 
         pruebas basicas para  RAMAS</p>
+
+     <p>Propuesta nueva de Desarrollo , mejores estrategias de mercado</p>
 </div>
 </div>
 </body>
