--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,13 @@
     <h1>SE REALIZARA BLOGPOST PARA VALIDAR RAMAS</h1>
     <p>Parrafo de inicio , se realizara 
         pruebas basicas para  RAMAS</p>
+
+    <p>Los mejores desarrollos son los basados en la autenticidad
+        de los creadores , el mundo cada vez mas avanza en un lugar
+        de desarrollo donde todo lo que gira en nuestra sociedad esta
+        basado en el.
+    </p>
+
 </div>
 </div>
 </body>
