Modificacion color y cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="CABECERA">
             CABECERA
-            <span id="Linea"> TOMAR NOTA </span>
+            <span id="Linea"> BLOG DE CABECERA </span>
         </div>
         <div id="post">
 
