Se modifica titulo y color

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="CABECERA">
             CABECERA
-            <span id="Linea"> TOMAR NOTA </span>
+            <span id="Linea"> BLOG MASTER </span>
         </div>
         <div id="post">
 
@@ -19,7 +19,7 @@
     <p>Parrafo de inicio , se realizara 
         pruebas basicas para  RAMAS</p>
 
-
+    <p>suscribete y dale link</p>
 
      
 
